# rustifly-engine

./: Cargo.toml  README.md  ç
src/: lib.rs  main.rs  utility.rs
src/graphics/: mod.rs
src/manager/: display_manager.rs  game_manager.rs  log_manager.rs  mod.rs  world_manager.rs
src/world/: assets.rs  events.rs  geometry.rs  mod.rs
