[package]
name = "rustifly-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
once_cell = "1.19.0"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
winit = { version = "0.29.10", features = ["rwh_05"] }
wgpu = "0.19"
rodio = "0.18.1"
glyphon = "0.5.0"
wgpu-types = "0.20.0"
